--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
   </head>
-  <body>
+  <body style="-webkit-app-region: drag">
     <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+    <script>
+      const electron = require('electron');;
+      const {Menu, MenuItem} = electron.remote;
+
+      const menu = new Menu();
+      menu.append(new MenuItem({label: 'MenuItem1', click() { console.log('item 1 clicked'); }}));
+      menu.append(new MenuItem({type: 'separator'}));
+      menu.append(new MenuItem({label: 'MenuItem2', type: 'checkbox', checked: true}));
+
+      window.addEventListener('contextmenu', (e) => {
+        e.preventDefault();
+        menu.popup(electron.remote.getCurrentWindow());
+      }, false);
+    </script>
   </body>
 </html>
